# irritator-old

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
app/: CMakeLists.txt
app/src/: dialog.cpp  glvle.cpp  glvle.hpp  irritator.cpp  irritator.hpp  log_window.cpp  main-unix.cpp  main-windows.cpp  main.cpp  menubar.cpp  package.cpp  package.hpp  package_window.cpp  text_window.cpp  vpz_window.cpp
lib/: CMakeLists.txt
lib/include/irritator/: allocator.hpp  data-array.hpp  data-list.hpp  linker.hpp  modeling.hpp  simulation.hpp  string.hpp
lib/src/: json.cpp  private.cpp  private.hpp  simulation.cpp
lib/test/: container.cpp  example-01.json  json.cpp  main.cpp
